[metadata]
name = hsiunien
version = 0.0.1
author = hugh
author_email = zens53@163.com
description = A compressor for images, such as png and jpg, 
long_description = file: README.md
long_descriotion_content_type = text/markdown
url = https://github.com/hsiunien/tinyimages
classifiers =
    Programing Language :: Python :: 3
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src
